--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
 
 [[redirects]]
     from = "/deneme/"
-    to = "/.netlify/functions/redirect"
+    to = "/deneme/"
     query = {ltcid = ":ltcid"}
-    status = 301
+    status = 404
     force = true
