--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
 
 [[redirects]]
     from = "/deneme/"
-    to = "/deneme/"
+    to = "/sayfa-bulunamadi"
     query = {ltcid = ":ltcid"}
     status = 404
     force = true
